Readme, nginx tweaks

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80 backlog=2048;
-    server_name calcaxy.com www.calcaxy.com calcaxy.clismon.com localhost;
+    listen 80;
+    server_name calcaxy.com www.calcaxy.com calcaxy.clismon.com;
     root /home/deployer/calcaxy.com;
 
     index index.html;
